<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/tvToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pushlog"
            android:padding="20dp"/>
        <Button
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crash_demo"
            android:onClick="crashActivityclick"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"/>
        <Button
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_kit_demo"
            android:onClick="gameActivityClick"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_kit_demo"
            android:onClick="scanActivityClick"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analytics_kit"
            android:onClick="analyticsActivityClick"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drive_kit_demo"
            android:onClick="driveActivityClick"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:onClick="accountActivityClick"
            android:text="@string/account_kit_demo"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlue"/>

        <Button
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_kit_demo"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:onClick="mapActivityClick"/>

        <Button
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_kit_demo"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:onClick="locationActivityClick"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>