<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/requestlocationupdateswithcallback"/>

            <Button
                android:id="@+id/requestLocationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/requestlocationupdates_with_callback"
                android:textAllCaps="false"
                android:onClick="requestLocationUpdatesWithCallback"/>

            <Button
                android:id="@+id/removeLocationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/removelocationupdates_with_callback"
                android:textAllCaps="false"
                android:onClick="removeLocationUpdatesWithCallback"/>

            <TextView
                android:id="@+id/logText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_n" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>