<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_title"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/id_token_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_token_mode_signin"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:onClick="IDTokenClick"/>
        <Button
            android:id="@+id/authCode_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorizationcode_mode_signin"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:onClick="AuthCodeClick"/>
        <Button
            android:id="@+id/signOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:onClick="signOutClick"/>

        <TextView
            android:id="@+id/logText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"/>
    </LinearLayout>



</ScrollView>